cargo-features = [ "profile-rustflags" ]

[package]
name = "termclock"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = [ "std", "clock" ] }
crossterm = { version = "0.29.0", default-features = false, features = [ "windows" ] }
configparser = "3.1.0"
ctrlc = "3.4.7"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

